--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 <body>
     <!-- ==============================Topbar Start==============================-->
-    <div class="container-fluid topbar d-none d-md-block px-5">
+    <div class="container-fluid topbar px-md-5">
         <nav class="navbar navbar-expand py-0 ">
             <div class="nav-item dropdown custom_dropdown">
                 <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown" id="navbarDropdownMenu"
                     role="button"><img src="assets/images/icons/user.png" alt="user" class="img-fluid">
                     MY ACCOUNT
                 </a>
-                <ul class="dropdown-menu rounded-0" aria-labelledby="navbarDropdownMenu">
+                <ul class="dropdown-menu drop_menu rounded-0" aria-labelledby="navbarDropdownMenu">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li class="d-inline-flex gap-3 ms-3"><label class="form-check-label"
+                    <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
                             for="flexSwitchCheckDefault">Dark
                             Mode</label>
                         <div class="form-check form-switch">
@@ -53,12 +53,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">SERVICES</a>
                     </li>
-                    <li class="custom_select d-inline-flex">
-                        <select class="form-select border-0" aria-label="example" id="select">
-                            <option selected>LANGUAGE</option>
-                            <option value="1">English</option>
-                            <option value="2">عَرَبِيّ</option>
-                        </select>
+                    <li class="nav-item dropdown custom_dropdown">
+                        <a class="nav-link dropdown-toggle btn" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <strong class="h6 m-0 header_options">
+                                LANGUAGE </strong>
+                        </a>
+                        <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
+                            <li><a class="dropdown-item justify-content-center d-flex" href="#">
+                                    English</a></li>
+                            <li><a class="dropdown-item justify-content-center d-flex" href="#">
+                                    عَرَبِيّ</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -69,19 +75,34 @@
     </div>
     <!-- ==============================Topbar End==============================-->
     <!-- ==============================Navbar Start==============================-->
-    <div class="container-fluid px-5">
+    <div class="container-fluid px-md-5">
         <nav class="navbar navbar-expand-lg">
-            <a href="index.html" class="navbar-brand m-0 p-0 rounded-3">
-                <img class="logo" src="assets/images/logo/logo.png" alt="logo"
-                    style="max-width: 241px;max-height: 62px;">
+            <a href="index.html" class="navbar-brand branding m-0 p-0 rounded-3">
+                <img src="assets/images/logo/logo.png" alt="logo">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+            <div class=" ml-auto d-flex gap-3">
+                <div class="searchaddicon align-items-center">
+                    <div class=" d-flex gap-3">
+                        <ul class="p-0 m-0">
+                            <li class="list-unstyled"><a href="#"><i class="fa-solid fa-circle-plus"></i></a></li>
+                        </ul>
+                        <ul class="p-0 m-0">
+                            <li class="list-unstyled"><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <button
+                    class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around align-self-center"
+                    type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="toggler-icon top-bar"></span>
+                    <span class="toggler-icon middle-bar"></span>
+                    <span class="toggler-icon bottom-bar"></span>
+                </button>
+            </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center m-auto gap-lg-4 gap-md-2 mb-2 mb-lg-0">
+                <ul class="navbar-nav justify-content-center m-auto gap-lg-4 gap-2">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">WOMEN</a>
                     </li>
@@ -101,18 +122,68 @@
                         <a class="nav-link" href="#">JEWELRY</a>
                     </li>
                 </ul>
-                <div class="ml-auto d-flex">
+                <div class="bottom_line px-0">
+                    <hr>
+                </div>
+                <div class="small_screennav">
+                    <ul class="navbar-nav gap-3 pt-2">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">LOGOUT</a>
+                        </li>
+                        <div class="nav-item dropdown custom_dropdown">
+                            <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown"
+                                id="navbarDropdownMenu" role="button">
+                                MY ACCOUNT
+                            </a>
+                            <ul class="dropdown-menu drop_menu rounded-0 m-0" aria-labelledby="navbarDropdownMenu">
+                                <li><a class="dropdown-item" href="#">Profile</a></li>
+                                <li><a class="dropdown-item" href="#">Settings</a></li>
+                                <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
+                                        for="flexSwitchCheckDefault">Dark
+                                        Mode</label>
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                    </div>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">ABOUT</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">INBOX</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">SERVICES</a>
+                        </li>
+                        <li class="nav-item dropdown custom_dropdown">
+                            <a class="nav-link dropdown-toggle btn p-0 py-2 px-0 d-flex align-items-center gap-0"
+                                href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                <strong class="h6 m-0 header_options">
+                                    LANGUAGE </strong>
+                            </a>
+                            <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
+                                <li><a class="dropdown-item justify-content-center d-flex" href="#">
+                                        English</a></li>
+                                <li><a class="dropdown-item justify-content-center d-flex" href="#">
+                                        عَرَبِيّ</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </div>
+                <div class="ml-auto d-flex gap-3">
                     <div class="navbar-nav add_post justify-content-between align-items-center d-flex">
-                        <div class="nav-item d-flex align-items-center" style="width: 85px;">
-                            <a class="nav-link p-0" href="#"><i class="fa-solid fa-circle-plus"></i></a>
-                            <a class="nav-link p-1" href="#">ADD
-                                POST</a>
+                        <div class="nav-item">
+                            <a class="nav-link p-0  d-flex align-items-center" href="#"><i
+                                    class="fa-solid fa-circle-plus me-1"></i>
+                                <span>ADD <br>
+                                    POST</span></a>
                         </div>
                     </div>
                     <div class="search-bar">
                         <form class="search-form d-flex align-items-center" method="POST" action="#">
-                            <input type="text" name="query" placeholder="Search Jeddah Mazad"
-                                title="Enter search keyword">
+                            <input type="search" placeholder="Search Jeddah Mazad" title="Enter search keyword" />
                             <button type="submit" title="Search"><i class="fa-solid fa-magnifying-glass"></i></button>
                         </form>
                     </div>
@@ -121,6 +192,55 @@
         </nav>
     </div>
     <!-- ==============================Navbar End==============================-->
+    <!-- ==============================Banner Start==============================-->
+    <section>
+        <div class="container-fluid">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-indicators">
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
+                        aria-current="true" aria-label="Slide 1"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
+                        aria-label="Slide 2"></button>
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
+                        aria-label="Slide 3"></button>
+                </div>
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>First slide label</h5>
+                            <p>Some representative placeholder content for the first slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="2000">
+                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Second slide label</h5>
+                            <p>Some representative placeholder content for the second slide.</p>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <div class="carousel-caption d-none d-md-block">
+                            <h5>Third slide label</h5>
+                            <p>Some representative placeholder content for the third slide.</p>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <!-- ==============================Banner End==============================-->
 </body>
 <!-- Bootstrap JS -->
 <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
