--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <nav class="navbar navbar-expand py-0 ">
             <div class="nav-item dropdown custom_dropdown">
                 <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown" id="navbarDropdownMenu"
-                    role="button"><img src="assets/images/icons/user.png" alt="user" class="img-fluid">
+                    role="button"><i class="fa-regular fa-user"></i>
                     MY ACCOUNT
                 </a>
-                <ul class="dropdown-menu drop_menu rounded-0" aria-labelledby="navbarDropdownMenu">
+                <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
                     <li><a class="dropdown-item" href="#">Profile</a></li>
                     <li><a class="dropdown-item" href="#">Settings</a></li>
                     <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
@@ -37,9 +37,9 @@
                     </li>
                 </ul>
             </div>
-            <ul class="navbar-nav logout ms-2">
+            <ul class="navbar-nav logout ms-3">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">LOG OUT</a>
+                    <a class="nav-link pt-0" href="#">LOG OUT</a>
                 </li>
             </ul>
             <div class="align-items-center ms-auto">
@@ -177,7 +177,7 @@
                         <div class="nav-item">
                             <a class="nav-link p-0  d-flex align-items-center" href="#"><i
                                     class="fa-solid fa-circle-plus me-1"></i>
-                                <span>ADD <br>
+                                <span style="line-height: 17px;">ADD <br>
                                     POST</span></a>
                         </div>
                     </div>
@@ -206,7 +206,7 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/main/Cover photo2.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/main/Clip0.png" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
