--- a/index.html
+++ b/index.html
@@ -19,24 +19,27 @@
     <!-- ==============================Topbar Start==============================-->
     <div class="container-fluid topbar px-md-5">
         <nav class="navbar navbar-expand py-0 ">
-            <div class="nav-item dropdown custom_dropdown">
-                <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown" id="navbarDropdownMenu"
-                    role="button"><i class="fa-regular fa-user"></i>
-                    MY ACCOUNT
-                </a>
-                <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
-                    <li><a class="dropdown-item" href="#">Profile</a></li>
-                    <li><a class="dropdown-item" href="#">Settings</a></li>
-                    <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
-                            for="flexSwitchCheckDefault">Dark
-                            Mode</label>
-                        <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                        </div>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+            <ul class="navbar-nav d-flex align-items-center">
+                <li class="list-unstyled nav-item dropdown custom_dropdown">
+                    <a href="#" class="nav-link dropdown-toggle p-0" data-bs-toggle="dropdown" id="navbarDropdownMenu"
+                        role="button"><i class="fa-regular fa-user me-1"></i>
+                        MY ACCOUNT
+                    </a>
+                    <ul class="dropdown-menu drop_menu rounded-0 ms-10" aria-labelledby="navbarDropdownMenu">
+                        <li><a class="dropdown-item" href="#">Profile</a></li>
+                        <li><a class="dropdown-item" href="#">Settings</a></li>
+                        <li class="d-inline-flex gap-3 ps-3 w-100"><label class="form-check-label"
+                                for="flexSwitchCheckDefault">Dark
+                                Mode</label>
+                            <div class="form-check form-switch">
+                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                            </div>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <div class="border_left"></div>
             <ul class="navbar-nav logout ms-3">
                 <li class="nav-item">
                     <a class="nav-link pt-0" href="#">LOG OUT</a>
@@ -56,8 +59,7 @@
                     <li class="nav-item dropdown custom_dropdown">
                         <a class="nav-link dropdown-toggle btn" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            <strong class="h6 m-0 header_options">
-                                LANGUAGE </strong>
+                            LANGUAGE
                         </a>
                         <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
                             <li><a class="dropdown-item justify-content-center d-flex" href="#">
@@ -160,8 +162,7 @@
                         <li class="nav-item dropdown custom_dropdown">
                             <a class="nav-link dropdown-toggle btn p-0 py-2 px-0 d-flex align-items-center gap-0"
                                 href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <strong class="h6 m-0 header_options">
-                                    LANGUAGE </strong>
+                                LANGUAGE
                             </a>
                             <ul class="dropdown-menu drop_menu2 rounded-0 border-0 m-0">
                                 <li><a class="dropdown-item justify-content-center d-flex" href="#">
@@ -206,21 +207,24 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="assets/images/main/Cover photo2.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/main/Cover photo2.png" class="d-block w-100" alt="..." width="100%"
+                            height="512">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="..." width="100%"
+                            height="512">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/main/Clip0.png" class="d-block w-100" alt="...">
+                        <img src="assets/images/main/Clip0.png" class="d-block w-100" alt="..." width="100%"
+                            height="512">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
