--- a/index.html
+++ b/index.html
@@ -83,16 +83,63 @@
                 <img src="assets/images/logo/logo.png" alt="logo">
             </a>
             <div class=" ml-auto d-flex gap-3">
-                <div class="searchaddicon align-items-center">
-                    <div class=" d-flex gap-3">
+                <div class="searchaddicon">
+                    <div class=" d-flex align-items-center gap-3">
                         <ul class="p-0 m-0">
-                            <li class="list-unstyled"><a href="#"><i class="fa-solid fa-circle-plus"></i></a></li>
+                            <li class="list-unstyled"><a href="#"><i class="fa-solid fa-circle-plus fs-3"></i></a></li>
                         </ul>
                         <ul class="p-0 m-0">
-                            <li class="list-unstyled"><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a>
+                            <li class="list-unstyled">
+                                <a href="#" class="btn float-end shadow-none" data-bs-toggle="offcanvas"
+                                    data-bs-target="#offcanvas" role="button">
+                                    <i class="fa-solid fa-magnifying-glass fs-3" data-bs-toggle="offcanvas"
+                                        data-bs-target="#offcanvas"></i>
+                                </a>
                             </li>
                         </ul>
                     </div>
+                    <!-- /////////// -->
+                    <div class="offcanvas offcanvas-start w-100" tabindex="-1" id="offcanvas" data-bs-keyboard="false"
+                        data-bs-backdrop="false">
+                        <div class="offcanvas-header">
+                            <div class="search-box w-100">
+                                <form class="search-form d-flex align-items-center" method="POST" action="#">
+                                    <input type="search" placeholder="Search Jeddah Mazad"
+                                        title="Enter search keyword" />
+                                    <button type="submit" title="Search"><i
+                                            class="fa-solid fa-magnifying-glass"></i></button>
+                                </form>
+                            </div>
+                            <button type="button" class="btn-close text-reset shadow-none" data-bs-dismiss="offcanvas"
+                                aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body px-0">
+                            <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-start" id="menu">
+                                <li class="nav-item">
+                                    <a href="#" class="nav-link text-truncate">
+                                        <span class="ms-1 d-sm-inline">Home</span>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#submenu1" data-bs-toggle="collapse" class="nav-link text-truncate">
+                                        <span class="ms-1 d-sm-inline">Home</span> </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link text-truncate">
+                                        <span class="ms-1 d-sm-inline">Home</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link text-truncate">
+                                        <span class="ms-1 d-sm-inline">Home</span></a>
+                                </li>
+                                <li>
+                                    <a href="#" class="nav-link text-truncate">
+                                        <span class="ms-1 d-sm-inline">Home</span> </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <!-- /////////// -->
                 </div>
                 <button
                     class="navbar-toggler collapsed d-flex d-lg-none flex-column justify-content-around align-self-center"
@@ -195,36 +242,25 @@
     <!-- ==============================Navbar End==============================-->
     <!-- ==============================Banner Start==============================-->
     <section>
-        <div class="container-fluid">
+        <div class="container-fluid px-0">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active"
-                        aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
-                </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
-                        <img src="assets/images/main/Cover photo2.png" class="d-block w-100" alt="..." width="100%"
-                            height="512">
+                        <img src="assets/images/main/TopBanner.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>First slide label</h5>
                             <p>Some representative placeholder content for the first slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item" data-bs-interval="2000">
-                        <img src="assets/images/main/Cover photo.png" class="d-block w-100" alt="..." width="100%"
-                            height="512">
+                        <img src="assets/images/main/TopBanner0.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Second slide label</h5>
                             <p>Some representative placeholder content for the second slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="assets/images/main/Clip0.png" class="d-block w-100" alt="..." width="100%"
-                            height="512">
+                        <img src="assets/images/main/TopBanner1.jpg" class="d-block w-100 img-fluid" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                             <h5>Third slide label</h5>
                             <p>Some representative placeholder content for the third slide.</p>
