--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                     </ul>
                 </li>
             </ul>
-            <div class="border_left"></div>
             <ul class="navbar-nav logout ms-3">
                 <li class="nav-item">
                     <a class="nav-link pt-0" href="#">LOG OUT</a>
@@ -99,44 +98,46 @@
                         </ul>
                     </div>
                     <!-- /////////// -->
-                    <div class="offcanvas offcanvas-start w-100" tabindex="-1" id="offcanvas" data-bs-keyboard="false"
-                        data-bs-backdrop="false">
-                        <div class="offcanvas-header">
-                            <div class="search-box w-100">
-                                <form class="search-form d-flex align-items-center" method="POST" action="#">
-                                    <input type="search" placeholder="Search Jeddah Mazad"
-                                        title="Enter search keyword" />
-                                    <button type="submit" title="Search"><i
-                                            class="fa-solid fa-magnifying-glass"></i></button>
-                                </form>
+                    <div class="container-fluid">
+                        <div class="offcanvas offcanvas-start w-100" tabindex="-1" id="offcanvas"
+                            data-bs-keyboard="false" data-bs-backdrop="false">
+                            <div class="offcanvas-header">
+                                <div class="search-box w-100">
+                                    <form class="search-form d-flex align-items-center" method="POST" action="#">
+                                        <input type="search" placeholder="Search Jeddah Mazad"
+                                            title="Enter search keyword" />
+                                        <button type="submit" title="Search"><i
+                                                class="fa-solid fa-magnifying-glass"></i></button>
+                                    </form>
+                                </div>
+                                <button type="button" class="btn-close text-reset shadow-none"
+                                    data-bs-dismiss="offcanvas" aria-label="Close"></button>
                             </div>
-                            <button type="button" class="btn-close text-reset shadow-none" data-bs-dismiss="offcanvas"
-                                aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body px-0">
-                            <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-start" id="menu">
-                                <li class="nav-item">
-                                    <a href="#" class="nav-link text-truncate">
-                                        <span class="ms-1 d-sm-inline">Home</span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#submenu1" data-bs-toggle="collapse" class="nav-link text-truncate">
-                                        <span class="ms-1 d-sm-inline">Home</span> </a>
-                                </li>
-                                <li>
-                                    <a href="#" class="nav-link text-truncate">
-                                        <span class="ms-1 d-sm-inline">Home</span></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="nav-link text-truncate">
-                                        <span class="ms-1 d-sm-inline">Home</span></a>
-                                </li>
-                                <li>
-                                    <a href="#" class="nav-link text-truncate">
-                                        <span class="ms-1 d-sm-inline">Home</span> </a>
-                                </li>
-                            </ul>
+                            <div class="offcanvas-body px-0">
+                                <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-start" id="menu">
+                                    <li class="nav-item">
+                                        <a href="#" class="nav-link text-truncate">
+                                            <span class="ms-1 d-sm-inline">Home</span>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="#submenu1" data-bs-toggle="collapse" class="nav-link text-truncate">
+                                            <span class="ms-1 d-sm-inline">Home</span> </a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link text-truncate">
+                                            <span class="ms-1 d-sm-inline">Home</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link text-truncate">
+                                            <span class="ms-1 d-sm-inline">Home</span></a>
+                                    </li>
+                                    <li>
+                                        <a href="#" class="nav-link text-truncate">
+                                            <span class="ms-1 d-sm-inline">Home</span> </a>
+                                    </li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                     <!-- /////////// -->
@@ -151,7 +152,7 @@
                 </button>
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav justify-content-center m-auto gap-lg-4 gap-2">
+                <ul class="navbar-nav justify-content-center m-auto gap-lg-4">
                     <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="#">WOMEN</a>
                     </li>
@@ -171,11 +172,11 @@
                         <a class="nav-link" href="#">JEWELRY</a>
                     </li>
                 </ul>
-                <div class="bottom_line px-0">
+                <div class="bottom_line px-0  d-block d-md-none w-100">
                     <hr>
                 </div>
                 <div class="small_screennav">
-                    <ul class="navbar-nav gap-3 pt-2">
+                    <ul class="navbar-nav pt-2">
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="#">LOGOUT</a>
                         </li>
@@ -245,25 +246,25 @@
         <div class="container-fluid px-0">
             <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="10000">
+                    <div class="carousel-item item_carousel active" data-bs-interval="10000">
                         <img src="assets/images/main/TopBanner.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                        <div class="carousel-caption caption_carousel">
+                            <h5>Audemars Piguet</h5>
+                            <a href="#">BID</a>
                         </div>
                     </div>
-                    <div class="carousel-item" data-bs-interval="2000">
-                        <img src="assets/images/main/TopBanner0.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
+                    <div class="carousel-item item_carousel" data-bs-interval="2000">
                         <img src="assets/images/main/TopBanner1.jpg" class="d-block w-100 img-fluid" alt="...">
-                        <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                        <div class="carousel-caption caption_carousel">
+                            <h5>Audemars Piguet</h5>
+                            <a href="#">BID</a>
+                        </div>
+                    </div>
+                    <div class="carousel-item item_carousel">
+                        <img src="assets/images/main/TopBanner.jpg" class="d-block w-100 img-fluid" alt="...">
+                        <div class="carousel-caption caption_carousel">
+                            <h5>Audemars Piguet</h5>
+                            <a href="#">BID</a>
                         </div>
                     </div>
                 </div>
@@ -281,6 +282,82 @@
         </div>
     </section>
     <!-- ==============================Banner End==============================-->
+    <!-- ==============================Auction Card Start==============================-->
+    <section class="py-5">
+        <div class="container">
+            <div class="heading pb-5 px-3">
+                <h4><span>Ongoing</span> Auctions</h4>
+            </div>
+            <div class="row gx-3 gy-5">
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip222.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card_title mb-4">GG Marmont</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip333.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Ongoing Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip444.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Ongoing Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip111.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Ongoing Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- ==============================Auction Card End==============================-->
 </body>
 <!-- Bootstrap JS -->
 <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
