--- a/index.html
+++ b/index.html
@@ -356,8 +356,82 @@
             </div>
         </div>
     </section>
-
-    <!-- ==============================Auction Card End==============================-->
+    <!-- ==============================Upcoming Auction Card End ==============================-->
+    <!-- ==============================Upcoming Auction Card Start ==============================-->
+    <section class="pb-5">
+        <div class="container">
+            <div class="heading pb-5 px-3">
+                <h4><span>Upcoming</span> Auctions</h4>
+            </div>
+            <div class="row gx-3 gy-5">
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip222.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card_title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip333.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip444.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-3 col-12">
+                    <div class="card auction_card border-0">
+                        <img src="assets/images/cards/clip111.png" class="card-img-top" alt="...">
+                        <div class="card-body px-0 heading">
+                            <h4 class="card-title mb-4">Upcoming Auctions</h4>
+                            <p class="card_text d-flex"><small>11 AUGUST - 11 SEPTEMBER 2023 |
+                                    10:00</small>
+                            </p>
+                            <p class=" card_text d-flex mb-5"><small>(GMT+3) KSA</small></p>
+                            <div class="d-flex align-items-center">
+                                <a href="#" class="card_bidbtn">BID</a>
+                                <a href="#"><img src="assets/images/icons/info.png" alt="info" class=" ms-4"></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- ==============================Upcoming Auction End==============================-->
 </body>
 <!-- Bootstrap JS -->
 <script src="assets/bootstrap/bootstrap.bundle.min.js"></script>
