--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
     <!-- ==============================Auction Card Start==============================-->
     <section class="py-5">
         <div class="container">
-            <div class="heading pb-5 px-3">
+            <div class="heading pb-5">
                 <h4><span>Ongoing</span> Auctions</h4>
             </div>
             <div class="row gx-3 gy-5">
@@ -360,7 +360,7 @@
     <!-- ==============================Upcoming Auction Card Start ==============================-->
     <section class="pb-5">
         <div class="container">
-            <div class="heading pb-5 px-3">
+            <div class="heading pb-5">
                 <h4><span>Upcoming</span> Auctions</h4>
             </div>
             <div class="row gx-3 gy-5">
